:Fixed alignment of disclosure

--- a/client/default/resources/sass/app.scss
+++ b/client/default/resources/sass/app.scss
@@ -71,16 +71,6 @@ background:#222930;
 }
 
 
-.userExpenseList .x-list-disclosure{
-  background: url("../images/arrow.png") center center no-repeat!important;
-  -webkit-mask: 0 !important;
-  margin-right:4px;
-  width: 0.8em!important;
-  height: 0.8em!important;
-  background-size:100% 100%!important ;
-  bottom: 0.9em;
-}
-
 //Styling for Dashboard Buttons
 // Styling for dashboard
 .dashboardPanelCls{
